# DnDHelper

./: Cargo.toml  build.rs
src/: lib.rs
ui/activities/: login.slint  main.slint  profile.slint
ui/components/: activity_pattern.slint  button.slint  input.slint  profile_image.slint  profile_text.slint  sidedown_button.slint  sidedown_menu.slint
